--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
       <div id="galgje-figuur">
         <div id="g-hoofd">
           <svg width="100%" height="100%" viewBox="-4 -4 108 108">
+
+            <!-- Opdracht 9 -->
+
             <circle cx="50" cy="50" r="50" stroke-width="8" />
+
+            <!-- Opdracht 9 -->
           </svg>
         </div>
         <div id="g-rechter-been"></div>
