--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Galgje</title>
   <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
   <link href="style.css" rel="stylesheet">
+
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 </head>
 
 <body>
